data/derived/comb/progs/unify/prog0744.ml.out
Characters 8-14:
  let _ = digits -1234;;
          ^^^^^^
Error: This expression has type int -> int list
       but an expression was expected of type int
